test/tests/stages/16_characters_and_strings/invalid_parse/extra_credit/string_literal_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  string literal("foo")
  :
  return
  const int(0)
  ;
  }
